# CV_assignment

./: CMakeLists.txt  README.md  info.plist
src/: main.cpp  process.cpp  process.h
